checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000285688.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:TYPO_SPELLING: 'errror' may be misspelled - perhaps 'error'?
#27: 
This patch fixes the following build errror caused by
                                     ^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '7dffa3c673fbcf835cd7be80bb4aec8ad3f51168', maybe rebased or not pulled?
#28: 
commit 7dffa3c673fbcf835cd7be80bb4aec8ad3f51168

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#36: 
/home/bunk/linux/kernel-2.6/git/linux-2.6/include/linux/clocksource.h:96: error: previous declaration of 'clock' was here

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000285688.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 3 warnings, 0 checks, 16 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000285688.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
